--- a/app/src/main/res/layout/media_store_fragment.xml
+++ b/app/src/main/res/layout/media_store_fragment.xml
@@ -1,57 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/media_store_group"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:checkedChip="@id/video"
+        app:selectionRequired="true"
+        app:singleSelection="true">
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/media_store_group"
-            android:layout_width="match_parent"
+        <com.google.android.material.chip.Chip
+            android:id="@+id/video"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            app:checkedChip="@id/video"
-            app:selectionRequired="true"
-            app:singleSelection="true">
+            android:checkable="true"
+            android:text="Video"
+            app:checkedIconEnabled="false" />
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/video"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                android:text="Video"
-                app:checkedIconEnabled="false" />
+        <com.google.android.material.chip.Chip
+            android:id="@+id/audio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checkable="true"
+            android:text="Audio"
+            app:checkedIconEnabled="false" />
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/audio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                android:text="Audio"
-                app:checkedIconEnabled="false" />
+        <com.google.android.material.chip.Chip
+            android:id="@+id/images"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checkable="true"
+            android:text="Images"
+            app:checkedIconEnabled="false" />
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/images"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                android:text="Images"
-                app:checkedIconEnabled="false" />
+        <com.google.android.material.chip.Chip
+            android:id="@+id/documents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checkable="true"
+            android:text="Documents"
+            app:checkedIconEnabled="false" />
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/documents"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                android:text="Documents"
-                app:checkedIconEnabled="false" />
+    </com.google.android.material.chip.ChipGroup>
 
-        </com.google.android.material.chip.ChipGroup>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/documents_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/media_item" />
 
-    </LinearLayout>
-
-</ScrollView>
+</LinearLayout>
