--- a/app/src/main/res/layout/media_store_fragment.xml
+++ b/app/src/main/res/layout/media_store_fragment.xml
@@ -11,9 +11,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:checkedChip="@id/video"
+        app:checkedChip="@id/images"
         app:selectionRequired="true"
         app:singleSelection="true">
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/images"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checkable="true"
+            android:text="Images"
+            app:checkedIconEnabled="false" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/video"
@@ -29,22 +37,6 @@
             android:layout_height="wrap_content"
             android:checkable="true"
             android:text="Audio"
-            app:checkedIconEnabled="false" />
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/images"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checkable="true"
-            android:text="Images"
-            app:checkedIconEnabled="false" />
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/documents"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checkable="true"
-            android:text="Documents"
             app:checkedIconEnabled="false" />
 
     </com.google.android.material.chip.ChipGroup>
