--- a/app/src/main/res/layout/saved_file_item.xml
+++ b/app/src/main/res/layout/saved_file_item.xml
@@ -5,8 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    app:cardElevation="6dp"
-    app:cardUseCompatPadding="true">
+    app:cardElevation="6dp">
 
     <LinearLayout
         android:layout_width="128dp"
