--- a/app/src/main/res/layout/saf_fragment.xml
+++ b/app/src/main/res/layout/saf_fragment.xml
@@ -35,4 +35,18 @@
         android:text="Save as"
         android:layout_margin="8dp" />
 
+    <Button
+        android:id="@+id/delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete"
+        android:layout_margin="8dp" />
+
+    <Button
+        android:id="@+id/update"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Update"
+        android:layout_margin="8dp" />
+
 </LinearLayout>
