Add writing arbitrary files (programmatically) to an opened SAF-derived directory

--- a/app/src/main/res/layout/saf_fragment.xml
+++ b/app/src/main/res/layout/saf_fragment.xml
@@ -66,6 +66,13 @@
             android:layout_margin="8dp"
             android:text="Open directory" />
 
+        <Button
+            android:id="@+id/add_to_opened_directory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="Add to opened directory" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/documents"
             android:layout_width="match_parent"
